package ecommerceRating.sandbox;

interface IUser {
    void execute();
}