package crr.testmodel;

/*Generated by MPS */


public class Comment {
  public int Id;
  public IUser Author;
  public boolean Approved;
  public String Content;

  public String toString() {
    String res = "";
    res += "Content: " + Content + ";\n";
    return res;
  }
}
