package crr.testmodel;

/*Generated by MPS */

import java.util.Scanner;

public class GeneralUser implements IUser {

  public int Id;
  public String Name;

  public GeneralUser(int id, String Name) {
    Id = id;
    this.Name = Name;
  }

  public String toString() {
    String res = "";
    res += "Id: " + Id + ";\n";
    res += "null: " + Name + ";\n";
    return res;
  }

  public void execute() {
    boolean exit = false;
    int selection;
    Scanner input = new Scanner(System.in);

    while (!(exit)) {
      System.out.println("Please select option");

      System.out.println("0 - Exit");
      System.out.println("1 - List " + "Product");
      System.out.println("2 - Comment " + "Product");

      try {
        selection = Integer.parseInt(input.nextLine());
      } catch (Exception ex) {
        System.out.println("Invalid option!");
        continue;
      }

      switch (selection) {
        case 0:
          exit = true;
          break;
        case 1:
          Utils.displayItems();
          break;
        case 2:
          Utils.createComment(this);
          break;
        default:
          System.out.println("Invalid option!");
          break;
      }
    }
  }
}
